--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,9 +1,8 @@
-<% provide(:title, 'About') %>
+<% provide(:title, 'Contact') %>
 
-    <h1>About</h1>
+    <h1>Contact</h1>
     <p>
-      This is the About page for the
+      This is the Contact page for the
       <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
       sample application.
     </p>
- 
